--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.4",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.3.0",
     "react-dom": "17.0.1"
   }
 }
