--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "firebase": "^8.2.1",
+    "firebase-admin": "^9.4.2",
+    "html-react-parser": "^1.2.4",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.3.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-html-parser": "^2.0.2"
   }
 }
