--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.3.0",
     "react-dom": "17.0.1",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react-select": "^4.0.2"
   }
 }
